--- a/sass/main.scss
+++ b/sass/main.scss
@@ -68,6 +68,9 @@ body {
                 &:nth-child(2) {
                     margin-right: 35px;  
                 }
+                &:nth-child(3) {
+                    margin-right: 35px;  
+                }
             }
         }
     }
