--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,18 +1,21 @@
+$main-color: #9a8c98;
+$secondary-color: #4a4e69;
+$background-color: #f2e9e4;
+
 body {
     padding: 0;
     margin: 0;
-    background: #f0ead2;
+    background: $background-color;
     main {
         width: 100%;
         .play-zone 
         {
             display: flex;
-            justify-content: center;
             align-items: center;
             flex-direction: column;
             margin: auto;
-            margin-top: 130px;
             font-family: 'Montserrat';
+            margin-top: 150px;
             .controls {
                 display: flex;
                 flex-direction: row;
@@ -23,21 +26,22 @@ body {
                     border: none;
                     border-radius: 10px;
                     font-size: 20px;
-                    background: #99d98c;
+                    background: $secondary-color;
                     transition-duration: 0.4s;
+                    color: white;
                     &:first-child {
                         margin-right: 15px;
-                        background: #b56576;
+                        background: $main-color;
                     }
                     &:hover {
-                        transform: scale(1.025);
+                        transform: scale(1.05);
                         transition-duration: 0.4s;
                         cursor: pointer;
                     }
                 }
             }
             #amount {
-                font-size: 70px;
+                font-size: 90px;
                 font-weight: bold;
             }
             #bankAmount {
