--- a/public/css/style.css
+++ b/public/css/style.css
@@ -3,16 +3,57 @@ body {
   margin: 0;
   background: #f2e9e4;
 }
+body header {
+  width: 100%;
+  font-family: "Montserrat";
+}
+body header .top {
+  padding: 15px;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  font-size: 20px;
+  margin-right: 15px;
+}
+body header .top i {
+  margin-left: 8px;
+}
 body main {
   width: 100%;
 }
 body main .play-zone {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
   display: flex;
   align-items: center;
   flex-direction: column;
-  margin: auto;
   font-family: "Montserrat";
-  margin-top: 150px;
+  text-align: center;
+}
+body main .play-zone #annonce {
+  width: 100%;
+  margin: auto;
+  text-align: center;
+}
+body main .play-zone .mise {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  font-size: 25px;
+}
+body main .play-zone .mise .fas {
+  margin-left: 8px;
+}
+body main .play-zone .mise .miser-btn button {
+  margin: 0 5px;
+  background-color: #4a4e69;
+  color: white;
+  padding: 10px;
+  border: none;
+  border-radius: 5px;
 }
 body main .play-zone .controls {
   display: flex;
@@ -38,8 +79,17 @@ body main .play-zone .controls button:hover {
   transition-duration: 0.4s;
   cursor: pointer;
 }
+body main .play-zone .bank {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+body main .play-zone .bank i {
+  font-size: 25px;
+  margin-right: 8px;
+}
 body main .play-zone #amount {
-  font-size: 90px;
+  font-size: 80px;
   font-weight: bold;
 }
 body main .play-zone #bankAmount {
@@ -60,6 +110,7 @@ body footer .stats {
   position: fixed;
   bottom: 0;
   left: 0;
+  background-color: #9a8c98;
 }
 body footer .stats .stater {
   font-size: 20px;
