--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,21 +1,66 @@
 $main-color: #9a8c98;
 $secondary-color: #4a4e69;
+$third-color: #c9ada7;
 $background-color: #f2e9e4;
 
 body {
     padding: 0;
     margin: 0;
     background: $background-color;
+    header {
+        width: 100%;
+        font-family: 'Montserrat';
+        .top {
+            padding: 15px;
+            display: flex;
+            justify-content: flex-end;
+            align-items: center;
+            font-size: 20px;
+            margin-right: 15px;
+            i {
+                margin-left: 8px;
+            }
+        }
+    }
     main {
         width: 100%;
         .play-zone 
         {
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
             display: flex;
             align-items: center;
             flex-direction: column;
-            margin: auto;
             font-family: 'Montserrat';
-            margin-top: 150px;
+            text-align: center;
+            #annonce {
+                width: 100%;
+                margin: auto;
+                text-align: center;
+            }
+            .mise {
+                display: flex;
+                justify-content: center;
+                flex-direction: column;
+                align-items: center;
+                font-size: 25px;
+                .fas {
+                    margin-left: 8px;
+                }
+                .miser-btn {
+                    
+                    button {
+                        margin: 0 5px;
+                        background-color: $secondary-color;
+                        color: white;
+                        padding: 10px;
+                        border: none;
+                        border-radius: 5px;
+                    }
+                }
+            }
             .controls {
                 display: flex;
                 flex-direction: row;
@@ -40,8 +85,17 @@ body {
                     }
                 }
             }
+            .bank {
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                i {
+                    font-size: 25px;
+                    margin-right: 8px;
+                }
+            }
             #amount {
-                font-size: 90px;
+                font-size: 80px;
                 font-weight: bold;
             }
             #bankAmount {
@@ -63,6 +117,7 @@ body {
             position: fixed;
             bottom: 0;
             left: 0;
+            background-color: $main-color;
             .stater {
                 font-size: 20px;
                 font-family: 'Montserrat';
