--- a/public/css/style.css
+++ b/public/css/style.css
@@ -21,6 +21,43 @@ body header .top i {
 body main {
   width: 100%;
 }
+body main .ending {
+  position: absolute;
+  background-color: rgba(74, 78, 105, 0.75);
+  backdrop-filter: blur(3px);
+  font-family: "Montserrat";
+  color: white;
+  width: 100%;
+  height: 100vh;
+  top: 0;
+  z-index: 50;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  opacity: 0;
+  display: none;
+}
+body main .ending p {
+  font-size: 35px;
+}
+body main .ending button {
+  padding: 12px;
+  border-radius: 5px;
+  border: none;
+  background-color: #4a4e69;
+  color: white;
+  font-size: 18px;
+  transition-duration: 0.6s;
+}
+body main .ending button:hover {
+  transform: scale(1.05);
+  cursor: pointer;
+  transition-duration: 0.6s;
+}
+body main .show {
+  animation: appear 1s forwards;
+}
 body main .play-zone {
   position: absolute;
   top: 50%;
@@ -54,6 +91,14 @@ body main .play-zone .mise .miser-btn button {
   padding: 10px;
   border: none;
   border-radius: 5px;
+  transition-duration: 0.6s;
+  padding: 8px;
+  font-family: "Montserrat";
+}
+body main .play-zone .mise .miser-btn button:hover {
+  transform: scale(1.1);
+  cursor: pointer;
+  transition-duration: 0.6s;
 }
 body main .play-zone .controls {
   display: flex;
@@ -111,6 +156,7 @@ body footer .stats {
   bottom: 0;
   left: 0;
   background-color: #9a8c98;
+  z-index: 51;
 }
 body footer .stats .stater {
   font-size: 20px;
@@ -124,6 +170,12 @@ body footer .stats .stater:nth-child(2) {
 }
 body footer .stats .stater:nth-child(3) {
   margin-right: 35px;
+}
+
+@keyframes appear {
+  to {
+    opacity: 100%;
+  }
 }
 
 /*# sourceMappingURL=style.css.map */
