--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,5 +1,5 @@
-$main-color: #9a8c98;
-$secondary-color: #4a4e69;
+$main-color: rgb(154, 140, 152);
+$secondary-color: rgb(74, 78, 105);
 $third-color: #c9ada7;
 $background-color: #f2e9e4;
 
@@ -24,6 +24,43 @@ body {
     }
     main {
         width: 100%;
+        .ending {
+            position: absolute;
+            background-color: rgba(74, 78, 105,0.75);
+            backdrop-filter: blur(3px);
+            font-family: 'Montserrat';
+            color: white;
+            width: 100%;
+            height: 100vh;
+            top: 0;
+            z-index: 50;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            flex-direction: column;
+            opacity: 0;
+            display: none;
+            p {
+                font-size: 35px;
+            }
+            button {
+                padding: 12px;
+                border-radius: 5px;
+                border: none;
+                background-color: $secondary-color;
+                color: white;
+                font-size: 18px;
+                transition-duration: 0.6s;
+                &:hover {
+                    transform: scale(1.05);
+                    cursor: pointer;
+                    transition-duration: 0.6s;
+                }
+            }
+        }
+        .show {
+            animation: appear 1s forwards;
+        }
         .play-zone 
         {
             position: absolute;
@@ -58,6 +95,14 @@ body {
                         padding: 10px;
                         border: none;
                         border-radius: 5px;
+                        transition-duration: 0.6s;
+                        padding: 8px;
+                        font-family: 'Montserrat';
+                        &:hover {
+                            transform: scale(1.1);
+                            cursor: pointer;
+                            transition-duration: 0.6s;
+                        }
                     }
                 }
             }
@@ -118,6 +163,7 @@ body {
             bottom: 0;
             left: 0;
             background-color: $main-color;
+            z-index: 51;
             .stater {
                 font-size: 20px;
                 font-family: 'Montserrat';
@@ -132,5 +178,11 @@ body {
                 }
             }
         }
+    }
+}
+
+@keyframes appear {
+    to {
+        opacity: 100%;
     }
 }
